# tictactoe

./: Cargo.toml  README.md  android_build.sh
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/_shared/: board.rs
src/domain/board/: board.rs  board_unit_tests.rs  mod.rs  tic_tac_toe_board.rs  tic_tac_toe_board_v2.rs
src/domain/minmax/: min_max.rs  min_max_unit_test.rs  min_max_v2.rs  mini_max_v3.rs  mod.rs
src/domain/tile/: mod.rs  tic_tac_toe_tile.rs  tile.rs
src/domain/trail/: mod.rs  trail.rs
src/infra/presenter/: min_max_input.rs  mod.rs
