[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"

[lib]
name = "rustylib"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.10.2", default-features = false }


[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"